--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="home.html" >Home</a>
             <a href="about.html">About</a>
-            <a href="portofolio.html">Portfolio</a>
+            <a href="portofolio.html">Portofolio</a>
             <a href="blog.html">Blog</a>
             <a href="contact.html" class="active" >Contact</a>
         </nav>
