--- a/blog.html
+++ b/blog.html
@@ -37,19 +37,19 @@
                 <img src="img/cara mengatur.png" alt="Cara Mengatur Waktu Kuliah" class="blog-image">
                 <h3>Cara Mengatur Waktu Kuliah, Organisasi, dan Proyek Tanpa Burnout</h3>
                 <p>Menyimbangkan kuliah, organisasi, dan proyek pribadi bisa seperti juggling bola...</p>
-                <a href="tampilan blog.html">Continue Reading →</a>
+                <a href="tampilan artikel 1.html">Continue Reading →</a>
             </div>
             <div class="blog-card">
                 <img src="img/5 aplikasi.png" alt="5 Aplikasi Wajib untuk Mahasiswa" class="blog-image">
                 <h3>5 Aplikasi Wajib untuk Mahasiswa Biar Kuliah Makin Produktif</h3>
                 <p>Mengatur waktu, tugas, dan jadwal kuliah jadi lebih mudah dengan aplikasi ini...</p>
-                <a href="#">Continue Reading →</a>
+                <a href="tampilan artikel 2.html">Continue Reading →</a>
             </div>
             <div class="blog-card">
                 <img src="img/dari malas (1).png" alt="Dari Malas Jadi Rajin" class="blog-image">
                 <h3>Dari Malas Jadi Rajin: Perjalanan Saya Mengubah Kebiasaan Buruk di Kampus</h3>
                 <p>Saya pernah berada di fase malas. Kini saya membentuk kebiasaan baru...</p>
-                <a href="#">Continue Reading →</a>
+                <a href="tampilan artikel 3.html">Continue Reading →</a>
             </div>
         </div>
     </section>
