--- a/home.html
+++ b/home.html
@@ -52,16 +52,19 @@
                 <img src="img/marklance.png" alt="Marklance">
                 <h3>MARKLANCE</h3>
                 <p>Marklance adalah platform yang menghubungkan digital marketer dengan klien untuk promosi dan layanan pemasaran digital.</p>
+                <a href="https://www.figma.com/design/PjZXbrwWw2XP2rcOxle6Lw/Tim-3-(Kelas-B)?node-id=0-1&p=f&t=vgu2EjSJSgjblVuY-0" class="read-button">Read</a>
             </div>
             <div class="project-card highlight">
                 <img src="img/fanzy logo.png" alt="Fanzy">
                 <h3>FANZY</h3>
                 <p>Tim marketing Fanzy yang bertanggung jawab mempromosikan dan meningkatkan penjualan topi kipas Fanzy melalui strategi pemasaran digital dan kampanye kreatif.</p>
+                <a href="https://drive.google.com/file/d/13QsEOYsQ0KgCrShq1lKra2TXdIgRkEs9/view?usp=sharing" class="read-button">Read</a>
             </div>
             <div class="project-card highlight">
                 <img src="img/ruang seni 1.png" alt="Ruang Seni">
                 <h3>Ruang Seni</h3>
                 <p>Ruang Seni adalah website penjualan lukisan yang menghubungkan seniman dengan pembeli, menawarkan berbagai karya seni dalam beragam gaya dan media.</p>
+                <a href="https://ruang-seni.vercel.app/" class="read-button">Read</a>
             </div>
         </div>
         <a href="portofolio.html" class="btn">Read More My Portofolio →</a>
@@ -88,19 +91,19 @@
                 <img src="img/cara mengatur.png" alt="Cara Mengatur Waktu Kuliah" class="blog-image">
                 <h3>Cara Mengatur Waktu Kuliah, Organisasi, dan Proyek Tanpa Burnout</h3>
                 <p>Menyimbangkan kuliah, organisasi, dan proyek pribadi bisa seperti juggling bola...</p>
-                <a href="#">Continue Reading →</a>
+                <a href="tampilan artikel 1.html">Continue Reading →</a>
             </div>
             <div class="blog-card">
                 <img src="img/5 aplikasi.png" alt="5 Aplikasi Wajib untuk Mahasiswa" class="blog-image">
                 <h3>5 Aplikasi Wajib untuk Mahasiswa Biar Kuliah Makin Produktif</h3>
                 <p>Mengatur waktu, tugas, dan jadwal kuliah jadi lebih mudah dengan aplikasi ini...</p>
-                <a href="#">Continue Reading →</a>
+                <a href="tampilan artikel 3.html">Continue Reading →</a>
             </div>
             <div class="blog-card">
                 <img src="img/dari malas (1).png" alt="Dari Malas Jadi Rajin" class="blog-image">
                 <h3>Dari Malas Jadi Rajin: Perjalanan Saya Mengubah Kebiasaan Buruk di Kampus</h3>
                 <p>Saya pernah berada di fase malas. Kini saya membentuk kebiasaan baru...</p>
-                <a href="#">Continue Reading →</a>
+                <a href="tampilan artikel 3.html">Continue Reading →</a>
             </div>
         </div>
         <a href="portofolio.html" class="btn">Read More My Portofolio →</a>
