--- a/portofolio.html
+++ b/portofolio.html
@@ -31,23 +31,28 @@
     </section>
 
     <section class="projects">
+        <h2>Featured Project</h2>
         <div class="project-list">
             <div class="project-card highlight">
                 <img src="img/marklance.png" alt="Marklance">
                 <h3>MARKLANCE</h3>
                 <p>Marklance adalah platform yang menghubungkan digital marketer dengan klien untuk promosi dan layanan pemasaran digital.</p>
+                <a href="https://www.figma.com/design/PjZXbrwWw2XP2rcOxle6Lw/Tim-3-(Kelas-B)?node-id=0-1&p=f&t=vgu2EjSJSgjblVuY-0" class="read-button">Read</a>
             </div>
             <div class="project-card highlight">
                 <img src="img/fanzy logo.png" alt="Fanzy">
                 <h3>FANZY</h3>
                 <p>Tim marketing Fanzy yang bertanggung jawab mempromosikan dan meningkatkan penjualan topi kipas Fanzy melalui strategi pemasaran digital dan kampanye kreatif.</p>
+                <a href="https://drive.google.com/file/d/13QsEOYsQ0KgCrShq1lKra2TXdIgRkEs9/view?usp=sharing" class="read-button">Read</a>
             </div>
             <div class="project-card highlight">
                 <img src="img/ruang seni 1.png" alt="Ruang Seni">
                 <h3>Ruang Seni</h3>
                 <p>Ruang Seni adalah website penjualan lukisan yang menghubungkan seniman dengan pembeli, menawarkan berbagai karya seni dalam beragam gaya dan media.</p>
+                <a href="https://ruang-seni.vercel.app/" class="read-button">Read</a>
             </div>
         </div>
+        <a href="portofolio.html" class="btn">Read More My Portofolio →</a>
     </section>
 
     <!-- Footer -->
