--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
                 <a href="tampilan artikel 3.html">Continue Reading →</a>
             </div>
         </div>
-        <a href="portofolio.html" class="btn">Read More My Portofolio →</a>
+        <a href="portofolio.html" class="btn">Read More Articles →</a>
     </section>
 
     <!-- Footer -->
