--- a/portofolio.html
+++ b/portofolio.html
@@ -62,11 +62,11 @@
     </div>
     <div class="social-icons">
         <a href="https://www.youtube.com/@ummulradiatuljannah9574"><i class="fab fa-youtube"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/um..mul?igsh=ZWNvdjJiNXJ6N2o0"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/ummul-radiatul-jannah-b45853348?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://x.com/ummrdtl"><i class="fab fa-x-twitter"></i></a>
         <a href="https://www.tiktok.com/@asahi_firstlove?_r=1&_d=eicel5k458kh1k&sec_uid=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&share_author_id=6960121342817862657&sharer_language=id&source=h5_t&u_code=didj6c61bl1l3i&timestamp=1746513915&user_id=6960121342817862657&sec_user_id=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&utm_source=whatsapp&utm_campaign=client_share&utm_medium=android&share_iid=7463025151443519233&share_link_id=9b8ab357-e84e-48d5-a631-be7d41ee4bde&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1"><i class="fab fa-tiktok"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.facebook.com/ummul.jannah.927"><i class="fab fa-facebook"></i></a>
     </div>
     <p>&copy; Ummul Radiatul Jannah 2025. All rights reserved.</p>
 </footer>
