ada lagi perubahan

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                 <a href="https://www.linkedin.com/in/ummul-radiatul-jannah-b45853348?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
                 <a href="https://x.com/ummrdtl"><i class="fab fa-x-twitter"></i></a>
                 <a href="https://www.tiktok.com/@asahi_firstlove?_r=1&_d=eicel5k458kh1k&sec_uid=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&share_author_id=6960121342817862657&sharer_language=id&source=h5_t&u_code=didj6c61bl1l3i&timestamp=1746513915&user_id=6960121342817862657&sec_user_id=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&utm_source=whatsapp&utm_campaign=client_share&utm_medium=android&share_iid=7463025151443519233&share_link_id=9b8ab357-e84e-48d5-a631-be7d41ee4bde&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1"><i class="fab fa-tiktok"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/ummul.jannah.927"><i class="fab fa-facebook"></i></a>
             </div>
         </div>
         <div class="hero-img">
@@ -52,22 +52,24 @@
                 <img src="img/marklance.png" alt="Marklance">
                 <h3>MARKLANCE</h3>
                 <p>Marklance adalah platform yang menghubungkan digital marketer dengan klien untuk promosi dan layanan pemasaran digital.</p>
-                <a href="https://www.figma.com/design/PjZXbrwWw2XP2rcOxle6Lw/Tim-3-(Kelas-B)?node-id=0-1&p=f&t=vgu2EjSJSgjblVuY-0" class="read-button">Read</a>
+                <a href="https://www.figma.com/design/PjZXbrwWw2XP2rcOxle6Lw/Tim-3-(Kelas-B)?node-id=0-1&p=f&t=vgu2EjSJSgjblVuY-0" class="read-button">See</a>
             </div>
             <div class="project-card highlight">
                 <img src="img/fanzy logo.png" alt="Fanzy">
                 <h3>FANZY</h3>
                 <p>Tim marketing Fanzy yang bertanggung jawab mempromosikan dan meningkatkan penjualan topi kipas Fanzy melalui strategi pemasaran digital dan kampanye kreatif.</p>
-                <a href="https://drive.google.com/file/d/13QsEOYsQ0KgCrShq1lKra2TXdIgRkEs9/view?usp=sharing" class="read-button">Read</a>
+                <a href="https://drive.google.com/file/d/13QsEOYsQ0KgCrShq1lKra2TXdIgRkEs9/view?usp=sharing" class="read-button">See More</a>
             </div>
             <div class="project-card highlight">
                 <img src="img/ruang seni 1.png" alt="Ruang Seni">
                 <h3>Ruang Seni</h3>
                 <p>Ruang Seni adalah website penjualan lukisan yang menghubungkan seniman dengan pembeli, menawarkan berbagai karya seni dalam beragam gaya dan media.</p>
-                <a href="https://ruang-seni.vercel.app/" class="read-button">Read</a>
+                <a href="https://ruang-seni.vercel.app/" class="read-button">See More</a>
             </div>
         </div>
-        <a href="portofolio.html" class="btn">Read More My Portofolio →</a>
+        <div style="text-align: center;">
+        <a href="portofolio.html" class="btn">Read More Articles →</a>
+        </div>
     </section>
 
     <!-- About -->
@@ -116,11 +118,11 @@
     </div>
     <div class="social-icons">
         <a href="https://www.youtube.com/@ummulradiatuljannah9574"><i class="fab fa-youtube"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/um..mul?igsh=ZWNvdjJiNXJ6N2o0"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/ummul-radiatul-jannah-b45853348?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://x.com/ummrdtl"><i class="fab fa-x-twitter"></i></a>
         <a href="https://www.tiktok.com/@asahi_firstlove?_r=1&_d=eicel5k458kh1k&sec_uid=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&share_author_id=6960121342817862657&sharer_language=id&source=h5_t&u_code=didj6c61bl1l3i&timestamp=1746513915&user_id=6960121342817862657&sec_user_id=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&utm_source=whatsapp&utm_campaign=client_share&utm_medium=android&share_iid=7463025151443519233&share_link_id=9b8ab357-e84e-48d5-a631-be7d41ee4bde&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1"><i class="fab fa-tiktok"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.facebook.com/ummul.jannah.927"><i class="fab fa-facebook"></i></a>
     </div>
     <p>&copy; Ummul Radiatul Jannah 2025. All rights reserved.</p>
 </footer>
