--- a/tampilan artikel 1.html
+++ b/tampilan artikel 1.html
@@ -45,6 +45,19 @@
             <p class="kesimpulan">Kesimpulan nya mengatur waktu dengan baik bukan berarti mengorbankan kesehatan mental. Dengan prioritas yang jelas, manajemen waktu yang tepat, dan keseimbangan antara kerja dan istirahat, kamu bisa tetap produktif tanpa harus mengalami burnout. Jadi, yuk mulai atur strategi dan tetap jaga kewarasan! Gimana? Ada tips lain yang sering kamu pakai buat ngatur waktu? Share di kolom komentar ya!</p>
           </div>
         </article>
+
+        <div class="share-buttons">
+            <p>Bagikan artikel ini:</p>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://contohwebsite.com/artikel" target="_blank">
+            <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://twitter.com/intent/tweet?url=https://contohwebsite.com/artikel&text=Cek artikel ini!" target="_blank">
+            <i class="fab fa-x-twitter"></i>
+             </a>
+            <a href="https://api.whatsapp.com/send?text=Cek artikel ini%20https://contohwebsite.com/artikel" target="_blank">
+            <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
     
     
       <section class="read-next">
