--- a/blog.html
+++ b/blog.html
@@ -25,13 +25,13 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h3>Hello There!</h3>
+            <h3>Read & Explore</h3>
             <p>I write about productivity, digital business, and student life, sharing insights and strategies to stay efficient and balanced. From time management tips to personal growth, I explore ways to make learning and working more effective. You can also find my thoughts on organization, self-improvement, and navigating university life.</p>
         </div>
     </section>
 
     <section class="blogs">
-        <h2>Blog Highlights</h2>
+        <h2>Blog</h2>
         <div class="blog-list">
             <div class="blog-card">
                 <img src="img/cara mengatur.png" alt="Cara Mengatur Waktu Kuliah" class="blog-image">
