--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
                 <img src="img/marklance.png" alt="Marklance">
                 <h3>MARKLANCE</h3>
                 <p>Marklance adalah platform yang menghubungkan digital marketer dengan klien untuk promosi dan layanan pemasaran digital.</p>
-                <a href="https://www.figma.com/design/PjZXbrwWw2XP2rcOxle6Lw/Tim-3-(Kelas-B)?node-id=0-1&p=f&t=vgu2EjSJSgjblVuY-0" class="read-button">See</a>
+                <a href="https://www.figma.com/design/PjZXbrwWw2XP2rcOxle6Lw/Tim-3-(Kelas-B)?node-id=0-1&p=f&t=vgu2EjSJSgjblVuY-0" class="read-button">See More</a>
             </div>
             <div class="project-card highlight">
                 <img src="img/fanzy logo.png" alt="Fanzy">
