--- a/portofolio.html
+++ b/portofolio.html
@@ -31,7 +31,7 @@
     </section>
 
     <section class="projects">
-        <h2>Featured Project</h2>
+        <h2>Project</h2>
         <div class="project-list">
             <div class="project-card highlight">
                 <img src="img/marklance.png" alt="Marklance">
