--- a/tampilan artikel 3.html
+++ b/tampilan artikel 3.html
@@ -44,6 +44,19 @@
             <p class="kesimpulan">Mengubah kebiasaan malas menjadi rajin memang tidak mudah, tetapi sangat mungkin dilakukan. Kuncinya adalah kesadaran, perencanaan, dan konsistensi. Dengan membuat jadwal, menggunakan teknik Pomodoro, mencari lingkungan yang mendukung, serta mengurangi gangguan, saya berhasil meningkatkan produktivitas saya secara signifikan. Jika saya bisa melakukan perubahan ini, kamu juga bisa! Mulailah dari langkah kecil dan teruslah konsisten. Jangan takut untuk mencoba strategi baru yang sesuai dengan gaya belajar dan rutinitasmu. Semangat menjalani perubahan, dan jadilah mahasiswa yang lebih produktif dan sukses!</p>
           </div>
         </article>
+
+        <div class="share-buttons">
+            <p>Bagikan artikel ini:</p>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://contohwebsite.com/artikel" target="_blank">
+            <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://twitter.com/intent/tweet?url=https://contohwebsite.com/artikel&text=Cek artikel ini!" target="_blank">
+            <i class="fab fa-x-twitter"></i>
+             </a>
+            <a href="https://api.whatsapp.com/send?text=Cek artikel ini%20https://contohwebsite.com/artikel" target="_blank">
+            <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
     
     
       <section class="read-next">
