--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
             <img src="img/logo urjourney.png" alt="Logo" />
         </div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="portofolio.html">Portofolio</a>
             <a href="#" class="active" >Blog</a>
