--- a/portofolio.html
+++ b/portofolio.html
@@ -21,6 +21,10 @@
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
+        <div class="search-box">
+            <input type="text" placeholder="Search...">
+            <button type="submit"><i class="fas fa-search"></i></button>
+        </div>
     </header>
 
     <section class="hero">
