--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <header>
+    <header id="header">
       <div class="logo">
         <img src="img/logo urjourney.png" alt="Logo" />
       </div>
@@ -124,6 +124,9 @@ Beyond academics, I am actively involved in Himpunan Mahasiswa Bisnis Digital (H
         <a href="https://x.com/ummrdtl"><i class="fab fa-x-twitter"></i></a>
         <a href="https://www.tiktok.com/@asahi_firstlove?_r=1&_d=eicel5k458kh1k&sec_uid=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&share_author_id=6960121342817862657&sharer_language=id&source=h5_t&u_code=didj6c61bl1l3i&timestamp=1746513915&user_id=6960121342817862657&sec_user_id=MS4wLjABAAAAmo1YlJ6JBnOgdVRdHHCHv6d2KgFSWF78QlVHc7BPCPhmIa2eJ7Hxcg1HaNBEba79&utm_source=whatsapp&utm_campaign=client_share&utm_medium=android&share_iid=7463025151443519233&share_link_id=9b8ab357-e84e-48d5-a631-be7d41ee4bde&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1"><i class="fab fa-tiktok"></i></a>
         <a href="https://www.facebook.com/ummul.jannah.927"><i class="fab fa-facebook"></i></a>
+    </div>
+    <div class="back-to-top">
+      <a href="#header"><i class="fas fa-arrow-up"></i> Back to Top</a>
     </div>
     <p>&copy; Ummul Radiatul Jannah 2025. All rights reserved.</p>
 </footer>
