--- a/portofolio.html
+++ b/portofolio.html
@@ -15,9 +15,9 @@
             <img src="img/logo urjourney.png" alt="Logo" />
         </div>
         <nav>
-            <a href="#" class="active" >Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
-            <a href="portofolio.html">Portofolio</a>
+            <a href="portofolio.html" class="active">Portofolio</a>
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
